--- a/index.html
+++ b/index.html
@@ -2,8 +2,32 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+
+<h1>The collection</h1>
+<p> Bitcoin </p>
+  <table style="width:100%">
+  <tr>
+    <th>Bitcoin White</th>
+    <th>Bitcoin Cyan</th>
+    <th>Bitcoin Green</th>
+    <th>Bitcoin Orange</th>
+    <th>Bitcoin Brown</th>
+  </tr>
+  <tr>
+    <td><img src="images/bitcoin_white.jpg" alt="bitcoin_white.jpg"></td>
+    <td>Smith</td>
+    <td>50</td>
+    <td>Smith</td>
+    <td>50</td>
+  </tr>
+  <tr>
+    <td>Eve</td>
+    <td>Jackson</td>
+    <td>94</td>
+    <td>Jackson</td>
+    <td>94</td>
+  </tr>
+</table>
 
 </body>
 </html>
