--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
   </tr>
   <tr>
     <td><img src="images/bitcoin_white.jpg" alt="bitcoin_white.jpg"></td>
-    <td>Smith</td>
-    <td>50</td>
-    <td>Smith</td>
-    <td>50</td>
+    <td><img src="images/bitcoin_cyan.jpg" alt="bitcoin_cyan.jpg"></td>
+    <td><img src="images/bitcoin_green.jpg" alt="bitcoin_green.jpg"></td>
+    <td><img src="images/bitcoin_orange.jpg" alt="bitcoin_orange.jpg"></td>
+    <td><img src="images/bitcoin_brown.jpg" alt="bitcoin_brown.jpg"></td>
   </tr>
   <tr>
-    <td>Eve</td>
+    <td>URL to Opensea</td>
     <td>Jackson</td>
     <td>94</td>
     <td>Jackson</td>
