--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <th>Bitcoin Brown</th>
   </tr>
   <tr>
-    <td><img src="images/bitcoin_white.jpg" alt="bitcoin_white.jpg"></td>
-    <td><img src="images/bitcoin_cyan.jpg" alt="bitcoin_cyan.jpg"></td>
-    <td><img src="images/bitcoin_green.jpg" alt="bitcoin_green.jpg"></td>
-    <td><img src="images/bitcoin_orange.jpg" alt="bitcoin_orange.jpg"></td>
-    <td><img src="images/bitcoin_brown.jpg" alt="bitcoin_brown.jpg"></td>
+    <td><img src="images/Bitcoin_white.jpg" alt="bitcoin_white.jpg"></td>
+    <td><img src="images/Bitcoin_cyan.jpg" alt="bitcoin_cyan.jpg"></td>
+    <td><img src="images/Bitcoin_green.jpg" alt="bitcoin_green.jpg"></td>
+    <td><img src="images/Bitcoin_orange.jpg" alt="bitcoin_orange.jpg"></td>
+    <td><img src="images/Bitcoin_brown.jpg" alt="bitcoin_brown.jpg"></td>
   </tr>
   <tr>
     <td>URL to Opensea</td>
