--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+  <link rel="stylesheet" href="mystyle.css">
+</head>
+  
 <body>
 
 
-<h1>The collection</h1>
+<h1>Circles and Lines NFT Collection</h1>
+  
 <p> Bitcoin </p>
   <table style="width:100%">
   <tr>
