--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <th>Bitcoin Brown</th>
   </tr>
   <tr>
-    <td><img src="images/Bitcoin_white.jpg" alt="bitcoin_white.jpg"></td>
+    <td><img src="images/Bitcoin_white.jpg" alt="bitcoin_white.jpg" style="max-height:100%; max-width:100%"></td>
     <td><img src="images/Bitcoin_cyan.jpg" alt="bitcoin_cyan.jpg"></td>
     <td><img src="images/Bitcoin_green.jpg" alt="bitcoin_green.jpg"></td>
     <td><img src="images/Bitcoin_orange.jpg" alt="bitcoin_orange.jpg"></td>
