--- a/index.html
+++ b/index.html
@@ -21,10 +21,35 @@
   </tr>
   <tr>
     <td><img src="images/Bitcoin_white.jpg" alt="bitcoin_white.jpg" style="max-height:100%; max-width:100%"></td>
-    <td><img src="images/Bitcoin_cyan.jpg" alt="bitcoin_cyan.jpg"></td>
-    <td><img src="images/Bitcoin_green.jpg" alt="bitcoin_green.jpg"></td>
-    <td><img src="images/Bitcoin_orange.jpg" alt="bitcoin_orange.jpg"></td>
-    <td><img src="images/Bitcoin_brown.jpg" alt="bitcoin_brown.jpg"></td>
+    <td><img src="images/Bitcoin_cyan.jpg" alt="bitcoin_cyan.jpg" style="max-height:100%; max-width:100%"></td>
+    <td><img src="images/Bitcoin_green.jpg" alt="bitcoin_green.jpg" style="max-height:100%; max-width:100%"></td>
+    <td><img src="images/Bitcoin_orange.jpg" alt="bitcoin_orange.jpg" style="max-height:100%; max-width:100%"></td>
+    <td><img src="images/Bitcoin_brown.jpg" alt="bitcoin_brown.jpg" style="max-height:100%; max-width:100%"></td>
+  </tr>
+  <tr>
+    <td>URL to Opensea</td>
+    <td>Jackson</td>
+    <td>94</td>
+    <td>Jackson</td>
+    <td>94</td>
+  </tr>
+</table>
+  
+<p> Unisawp </p>
+<table style="width:100%">
+  <tr>
+    <th>Uniswap White</th>
+    <th>Uniswap Cyan</th>
+    <th>Uniswap Green</th>
+    <th>Uniswap Pink</th>
+    <th>Uniswap Rainbow</th>
+  </tr>
+  <tr>
+    <td><img src="images/Bitcoin_white.jpg" alt="bitcoin_white.jpg" style="max-height:100%; max-width:100%"></td>
+    <td><img src="images/Bitcoin_cyan.jpg" alt="bitcoin_cyan.jpg" style="max-height:100%; max-width:100%"></td>
+    <td><img src="images/Bitcoin_green.jpg" alt="bitcoin_green.jpg" style="max-height:100%; max-width:100%"></td>
+    <td><img src="images/Bitcoin_orange.jpg" alt="bitcoin_orange.jpg" style="max-height:100%; max-width:100%"></td>
+    <td><img src="images/Bitcoin_brown.jpg" alt="bitcoin_brown.jpg" style="max-height:100%; max-width:100%"></td>
   </tr>
   <tr>
     <td>URL to Opensea</td>
