--- a/index.html
+++ b/index.html
@@ -59,6 +59,32 @@
     <td>94</td>
   </tr>
 </table>
+  
+  
+<p> Polygon </p>
+<table style="width:100%">
+  <tr>
+    <th>Uniswap White</th>
+    <th>Uniswap Cyan</th>
+    <th>Uniswap Green</th>
+    <th>Uniswap Purple</th>
+    <th>Uniswap Yellow</th>
+  </tr>
+  <tr>
+    <td><img src="images/Polygon_white.jpg" alt="Polygon_white.jpg" style="max-height:100%; max-width:100%"></td>
+    <td><img src="images/Polygon_cyan.jpg" alt="Polygon_cyan.jpg" style="max-height:100%; max-width:100%"></td>
+    <td><img src="images/Polygon_green.jpg" alt="Polygon_green.jpg" style="max-height:100%; max-width:100%"></td>
+    <td><img src="images/Polygon_purple.jpg" alt="Polygon_purple.jpg" style="max-height:100%; max-width:100%"></td>
+    <td><img src="images/Polygon_yellow.jpg" alt="Polygon_yellow.jpg" style="max-height:100%; max-width:100%"></td>
+  </tr>
+  <tr>
+    <td>URL to Opensea</td>
+    <td>Jackson</td>
+    <td>94</td>
+    <td>Jackson</td>
+    <td>94</td>
+  </tr>
+</table>
 
 </body>
 </html>
