--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     <td><img src="images/Bitcoin_brown.jpg" alt="bitcoin_brown.jpg" style="max-height:100%; max-width:100%"></td>
   </tr>
   <tr>
-    <td>URL to Opensea</td>
-    <td>Jackson</td>
-    <td>94</td>
-    <td>Jackson</td>
-    <td>94</td>
+    <td>See on Opensea</td>
+    <td>See on Opensea</td>
+    <td>See on Opensea</td>
+    <td>See on Opensea</td>
+    <td>See on Opensea</td>
   </tr>
 </table>
   
@@ -52,11 +52,11 @@
     <td><img src="images/Bitcoin_brown.jpg" alt="bitcoin_brown.jpg" style="max-height:100%; max-width:100%"></td>
   </tr>
   <tr>
-    <td>URL to Opensea</td>
-    <td>Jackson</td>
-    <td>94</td>
-    <td>Jackson</td>
-    <td>94</td>
+    <td>See on Opensea</td>
+    <td>See on Opensea</td>
+    <td>See on Opensea</td>
+    <td>See on Opensea</td>
+    <td>See on Opensea</td>
   </tr>
 </table>
   
@@ -78,11 +78,11 @@
     <td><img src="images/Polygon_yellow.jpg" alt="Polygon_yellow.jpg" style="max-height:100%; max-width:100%"></td>
   </tr>
   <tr>
-    <td>URL to Opensea</td>
-    <td>Jackson</td>
-    <td>94</td>
-    <td>Jackson</td>
-    <td>94</td>
+    <td>See on Opensea</td>
+    <td>See on Opensea</td>
+    <td>See on Opensea</td>
+    <td>See on Opensea</td>
+    <td>See on Opensea</td>
   </tr>
 </table>
 
