--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
 <p> Polygon </p>
 <table style="width:100%">
   <tr>
-    <th>Uniswap White</th>
-    <th>Uniswap Cyan</th>
-    <th>Uniswap Green</th>
-    <th>Uniswap Purple</th>
-    <th>Uniswap Yellow</th>
+    <th>Polygon White</th>
+    <th>Polygon Cyan</th>
+    <th>Polygon Green</th>
+    <th>Polygon Purple</th>
+    <th>Polygon Yellow</th>
   </tr>
   <tr>
     <td><img src="images/Polygon_white.jpg" alt="Polygon_white.jpg" style="max-height:100%; max-width:100%"></td>
