--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
     <th>Uniswap Rainbow</th>
   </tr>
   <tr>
-    <td><img src="images/Bitcoin_white.jpg" alt="bitcoin_white.jpg" style="max-height:100%; max-width:100%"></td>
-    <td><img src="images/Bitcoin_cyan.jpg" alt="bitcoin_cyan.jpg" style="max-height:100%; max-width:100%"></td>
-    <td><img src="images/Bitcoin_green.jpg" alt="bitcoin_green.jpg" style="max-height:100%; max-width:100%"></td>
-    <td><img src="images/Bitcoin_orange.jpg" alt="bitcoin_orange.jpg" style="max-height:100%; max-width:100%"></td>
-    <td><img src="images/Bitcoin_brown.jpg" alt="bitcoin_brown.jpg" style="max-height:100%; max-width:100%"></td>
+    <td><img src="images/Uni_white.jpg" alt="Uni_white.jpg" style="max-height:100%; max-width:100%"></td>
+    <td><img src="images/Uni_cyan.jpg" alt="Uni_cyan.jpg" style="max-height:100%; max-width:100%"></td>
+    <td><img src="images/Uni_green.jpg" alt="Uni_green.jpg" style="max-height:100%; max-width:100%"></td>
+    <td><img src="images/Uni_pink.jpg" alt="Uni_pink.jpg" style="max-height:100%; max-width:100%"></td>
+    <td><img src="images/Uni_rainbow.jpg" alt="Uni_rainbow.jpg" style="max-height:100%; max-width:100%"></td>
   </tr>
   <tr>
     <td>See on Opensea</td>
