--- a/index.html
+++ b/index.html
@@ -85,6 +85,31 @@
     <td>See on Opensea</td>
   </tr>
 </table>
+  
+<p> PancakeSwap </p>
+<table style="width:100%">
+  <tr>
+    <th>PancakeSwap White</th>
+    <th>PancakeSwap Cyan</th>
+    <th>PancakeSwap Green</th>
+    <th>PancakeSwap Caramel</th>
+    <th>PancakeSwap Brown/th>
+  </tr>
+  <tr>
+    <td><img src="images/PCS_white.jpg" alt="PCS_white.jpg" style="max-height:100%; max-width:100%"></td>
+    <td><img src="images/PCS_cyan.jpg" alt="PCS_cyan.jpg" style="max-height:100%; max-width:100%"></td>
+    <td><img src="images/PCS_green.jpg" alt="PCS_green.jpg" style="max-height:100%; max-width:100%"></td>
+    <td><img src="images/PCS_caramel.jpg" alt="PCS_caramel.jpg" style="max-height:100%; max-width:100%"></td>
+    <td><img src="images/PCS_brown.jpg" alt="PCS_brown.jpg" style="max-height:100%; max-width:100%"></td>
+  </tr>
+  <tr>
+    <td>See on Opensea</td>
+    <td>See on Opensea</td>
+    <td>See on Opensea</td>
+    <td>See on Opensea</td>
+    <td>See on Opensea</td>
+  </tr>
+</table>
 
 </body>
 </html>
