--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <th>PancakeSwap Cyan</th>
     <th>PancakeSwap Green</th>
     <th>PancakeSwap Caramel</th>
-    <th>PancakeSwap Brown/th>
+    <th>PancakeSwap Brown</th>
   </tr>
   <tr>
     <td><img src="images/PCS_white.jpg" alt="PCS_white.jpg" style="max-height:100%; max-width:100%"></td>
