--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 <div class = "main" id = "main">
 <h1>Circles and Lines NFT Collection</h1>
   <p> Welcome to the official web page for the Circles and Lines NFT Collection </p>
+  
+  <p> You can find our full collection on <a href ="https://opensea.io/collection/circles-and-lines" target="_blank"> OpenSea! </a> </p>
+  
 </div>
 
 </body>
