--- a/Collection.html
+++ b/Collection.html
@@ -41,7 +41,7 @@
     <td><img src="images/Bitcoin_brown.jpg" alt="bitcoin_brown.jpg" style="max-height:100%; max-width:100%"></td>
   </tr>
   <tr>
-    <td>See on Opensea</td>
+    <td><a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/83636007676239720488380752112474547478310496889229893062696233203146042638337" target="_blank">See on Opensea</a>link text</a></td>
     <td>See on Opensea</td>
     <td>See on Opensea</td>
     <td>See on Opensea</td>
@@ -115,6 +115,31 @@
     <td><img src="images/PCS_green.jpg" alt="PCS_green.jpg" style="max-height:100%; max-width:100%"></td>
     <td><img src="images/PCS_caramel.jpg" alt="PCS_caramel.jpg" style="max-height:100%; max-width:100%"></td>
     <td><img src="images/PCS_brown.jpg" alt="PCS_brown.jpg" style="max-height:100%; max-width:100%"></td>
+  </tr>
+  <tr>
+    <td>See on Opensea</td>
+    <td>See on Opensea</td>
+    <td>See on Opensea</td>
+    <td>See on Opensea</td>
+    <td>See on Opensea</td>
+  </tr>
+</table>
+    
+    <p> Influencers </p>
+<table style="width:100%">
+  <tr>
+    <th>Influencer 01 White</th>
+    <th>Influencer 02 White</th>
+    <th>Influencer 03 White</th>
+    <th>Influencer 04 White</th>
+    <th>Influencer 05 White</th>
+  </tr>
+  <tr>
+    <td><img src="images/Inf_EM_white.jpg" alt="Inf_EM_white.jpg" style="max-height:100%; max-width:100%"></td>
+    <td><img src="images/Inf_CZ_white.jpg" alt="Inf_CZ_white.jpg" style="max-height:100%; max-width:100%"></td>
+    <td><img src="images/Inf_VB_white.jpg" alt="Inf_VB_white.jpg" style="max-height:100%; max-width:100%"></td>
+    <td><img src="images/Inf_CH_white.jpg" alt="Inf_CH_white.jpg" style="max-height:100%; max-width:100%"></td>
+    <td><img src="images/Inf_GW_white.jpg" alt="Inf_GW_white.jpg" style="max-height:100%; max-width:100%"></td>
   </tr>
   <tr>
     <td>See on Opensea</td>
