--- a/Collection.html
+++ b/Collection.html
@@ -41,7 +41,7 @@
     <td><img src="images/Bitcoin_brown.jpg" alt="bitcoin_brown.jpg" style="max-height:100%; max-width:100%"></td>
   </tr>
   <tr>
-    <td><a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/83636007676239720488380752112474547478310496889229893062696233203146042638337" target="_blank">See on Opensea</a>link text</a></td>
+    <td><a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/83636007676239720488380752112474547478310496889229893062696233203146042638337" target="_blank">See on Opensea</a></td>
     <td>See on Opensea</td>
     <td>See on Opensea</td>
     <td>See on Opensea</td>
