--- a/Collection.html
+++ b/Collection.html
@@ -93,11 +93,11 @@
     <td><img src="images/Polygon_yellow.jpg" alt="Polygon_yellow.jpg" style="max-height:100%; max-width:100%"></td>
   </tr>
   <tr>
-    <td>See on Opensea</td>
-    <td>See on Opensea</td>
-    <td>See on Opensea</td>
-    <td>See on Opensea</td>
-    <td>See on Opensea</td>
+    <td><a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/83636007676239720488380752112474547478310496889229893062696233214141158916097" target="_blank">See on Opensea</a></td>  
+    <td><a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/83636007676239720488380752112474547478310496889229893062696233215240670543873" target="_blank">See on Opensea</a></td>
+    <td><a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/83636007676239720488380752112474547478310496889229893062696233216340182171649" target="_blank">See on Opensea</a></td>
+    <td><a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/83636007676239720488380752112474547478310496889229893062696233217439693799425" target="_blank">See on Opensea</a></td>
+    <td><a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/83636007676239720488380752112474547478310496889229893062696233218539205427201" target="_blank">See on Opensea</a></td>
   </tr>
 </table>
   
@@ -118,11 +118,11 @@
     <td><img src="images/PCS_brown.jpg" alt="PCS_brown.jpg" style="max-height:100%; max-width:100%"></td>
   </tr>
   <tr>
-    <td>See on Opensea</td>
-    <td>See on Opensea</td>
-    <td>See on Opensea</td>
-    <td>See on Opensea</td>
-    <td>See on Opensea</td>
+    <td><a href="" target="_blank">See on Opensea</a></td>  
+    <td><a href="" target="_blank">See on Opensea</a></td>
+    <td><a href="" target="_blank">See on Opensea</a></td>
+    <td><a href="" target="_blank">See on Opensea</a></td>
+    <td><a href="" target="_blank">See on Opensea</a></td>
   </tr>
 </table>
     
@@ -143,14 +143,20 @@
     <td><img src="images/Inf_GW_white.jpg" alt="Inf_GW_white.jpg" style="max-height:100%; max-width:100%"></td>
   </tr>
   <tr>
-    <td>See on Opensea</td>
-    <td>See on Opensea</td>
-    <td>See on Opensea</td>
-    <td>See on Opensea</td>
-    <td>See on Opensea</td>
+    <td><a href="" target="_blank">See on Opensea</a></td>  
+    <td><a href="" target="_blank">See on Opensea</a></td>
+    <td><a href="" target="_blank">See on Opensea</a></td>
+    <td><a href="" target="_blank">See on Opensea</a></td>
+    <td><a href="" target="_blank">See on Opensea</a></td>
   </tr>
 </table>
   </div>
   
 </body>
 </html>
+
+<!-- <td><a href="" target="_blank">See on Opensea</a></td>  
+    <td><a href="" target="_blank">See on Opensea</a></td>
+    <td><a href="" target="_blank">See on Opensea</a></td>
+    <td><a href="" target="_blank">See on Opensea</a></td>
+    <td><a href="" target="_blank">See on Opensea</a></td> -->
