--- a/Collection.html
+++ b/Collection.html
@@ -118,22 +118,22 @@
     <td><img src="images/PCS_brown.jpg" alt="PCS_brown.jpg" style="max-height:100%; max-width:100%"></td>
   </tr>
   <tr>
-    <td><a href="" target="_blank">See on Opensea</a></td>  
-    <td><a href="" target="_blank">See on Opensea</a></td>
-    <td><a href="" target="_blank">See on Opensea</a></td>
-    <td><a href="" target="_blank">See on Opensea</a></td>
-    <td><a href="" target="_blank">See on Opensea</a></td>
+    <td><a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/83636007676239720488380752112474547478310496889229893062696233219638717054977" target="_blank">See on Opensea</a></td>  
+    <td><a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/83636007676239720488380752112474547478310496889229893062696233220738228682753" target="_blank">See on Opensea</a></td>
+    <td><a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/83636007676239720488380752112474547478310496889229893062696233221837740310529" target="_blank">See on Opensea</a></td>
+    <td><a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/83636007676239720488380752112474547478310496889229893062696233222937251938305" target="_blank">See on Opensea</a></td>
+    <td><a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/83636007676239720488380752112474547478310496889229893062696233224036763566081" target="_blank">See on Opensea</a></td>
   </tr>
 </table>
     
     <p> Influencers </p>
 <table style="width:100%">
   <tr>
-    <th>Influencer 01 White</th>
-    <th>Influencer 02 White</th>
-    <th>Influencer 03 White</th>
-    <th>Influencer 04 White</th>
-    <th>Influencer 05 White</th>
+    <th>EM White</th>
+    <th>CZ White</th>
+    <th>VB White</th>
+    <th>CH White</th>
+    <th>GW White</th>
   </tr>
   <tr>
     <td><img src="images/Inf_EM_white.jpg" alt="Inf_EM_white.jpg" style="max-height:100%; max-width:100%"></td>
@@ -143,11 +143,11 @@
     <td><img src="images/Inf_GW_white.jpg" alt="Inf_GW_white.jpg" style="max-height:100%; max-width:100%"></td>
   </tr>
   <tr>
-    <td><a href="" target="_blank">See on Opensea</a></td>  
-    <td><a href="" target="_blank">See on Opensea</a></td>
-    <td><a href="" target="_blank">See on Opensea</a></td>
-    <td><a href="" target="_blank">See on Opensea</a></td>
-    <td><a href="" target="_blank">See on Opensea</a></td>
+    <td><a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/83636007676239720488380752112474547478310496889229893062696233225136275193857/" target="_blank">See on Opensea</a></td>  
+    <td><a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/83636007676239720488380752112474547478310496889229893062696233226235786821633/" target="_blank">See on Opensea</a></td>
+    <td><a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/83636007676239720488380752112474547478310496889229893062696233227335298449409/" target="_blank">See on Opensea</a></td>
+    <td><a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/83636007676239720488380752112474547478310496889229893062696233228434810077185/" target="_blank">See on Opensea</a></td>
+    <td><a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/83636007676239720488380752112474547478310496889229893062696233229534321704961/" target="_blank">See on Opensea</a></td>
   </tr>
 </table>
   </div>
