--- a/Background.html
+++ b/Background.html
@@ -28,6 +28,20 @@
 <div class = "main" id = "main">
 <h1>Circles and Lines NFT Collection</h1>
   <p> Here I'll post a description of how they are made </p>
+  
+  Example with square
+  <img src="images/Expl1.gif" alt="1 circle"  style="max-height:100%; max-width:100%">
+  <img src="images/Expl2.gif" alt="2 circles" style="max-height:100%; max-width:100%">
+  <img src="images/Expl3.gif" alt="3 circles" style="max-height:100%; max-width:100%">
+  
+  Example with Pi
+  <img src="images/Pi02.gif" alt="2 circles" style="max-height:100%; max-width:100%">
+  <img src="images/Pi04.gif" alt="4 circles" style="max-height:100%; max-width:100%">
+  <img src="images/Pi08.gif" alt="8 circles" style="max-height:100%; max-width:100%">
+  <img src="images/Pi16.gif" alt="16 circles" style="max-height:100%; max-width:100%">
+  <img src="images/Pi32.gif" alt="32 circles" style="max-height:100%; max-width:100%">
+  <img src="images/Pi64.gif" alt="64 circles" style="max-height:100%; max-width:100%">
+  
 </div>
 
 </body>
