--- a/Background.html
+++ b/Background.html
@@ -35,12 +35,12 @@
   <img src="images/Expl3.gif" alt="3 circles" style="max-height:100%; max-width:100%">
   
   Example with Pi
-  <img src="images/Pi02.gif" alt="2 circles" style="max-height:100%; max-width:100%">
-  <img src="images/Pi04.gif" alt="4 circles" style="max-height:100%; max-width:100%">
-  <img src="images/Pi08.gif" alt="8 circles" style="max-height:100%; max-width:100%">
-  <img src="images/Pi16.gif" alt="16 circles" style="max-height:100%; max-width:100%">
-  <img src="images/Pi32.gif" alt="32 circles" style="max-height:100%; max-width:100%">
-  <img src="images/Pi64.gif" alt="64 circles" style="max-height:100%; max-width:100%">
+  <img src="images/pi02.gif" alt="2 circles" style="max-height:100%; max-width:100%">
+  <img src="images/pi04.gif" alt="4 circles" style="max-height:100%; max-width:100%">
+  <img src="images/pi08.gif" alt="8 circles" style="max-height:100%; max-width:100%">
+  <img src="images/pi16.gif" alt="16 circles" style="max-height:100%; max-width:100%">
+  <img src="images/pi32.gif" alt="32 circles" style="max-height:100%; max-width:100%">
+  <img src="images/pi64.gif" alt="64 circles" style="max-height:100%; max-width:100%">
   
 </div>
 
