--- a/Background.html
+++ b/Background.html
@@ -29,12 +29,12 @@
 <h1>Circles and Lines NFT Collection</h1>
   <p> Here I'll post a description of how they are made </p>
   
-  Example with square
+  <p> Example with square</p>
   <img src="images/Expl1.gif" alt="1 circle"  style="max-height:100%; max-width:100%">
   <img src="images/Expl2.gif" alt="2 circles" style="max-height:100%; max-width:100%">
   <img src="images/Expl3.gif" alt="3 circles" style="max-height:100%; max-width:100%">
   
-  Example with Pi
+  <p> Example with Pi</p>
   <img src="images/pi02.gif" alt="2 circles" style="max-height:100%; max-width:100%">
   <img src="images/pi04.gif" alt="4 circles" style="max-height:100%; max-width:100%">
   <img src="images/pi08.gif" alt="8 circles" style="max-height:100%; max-width:100%">
