--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 <h1>Circles and Lines NFT Collection</h1>
   <p> Welcome to the official web page for the Circles and Lines NFT Collection </p>
   
+  <p> This website is still under construction and will be updated soon!</p>
+  
   <p> You can find our full collection on <a href ="https://opensea.io/collection/circles-and-lines" target="_blank"> OpenSea! </a> </p>
   
 </div>
