--- a/Background.html
+++ b/Background.html
@@ -27,9 +27,10 @@
 <div data-include="TopNav"></div>
 <div class = "main" id = "main">
 <h1>Circles and Lines NFT Collection</h1>
-  <p> Here I'll post a description of how they are made </p>
-  
+  <p> Here I'll post a description of how they are made, by demonstrating with a simple image</p>
   <p> Example with square</p>
+  <p> Lets start with a super simple example: Here our "image" is a square pattern with 16 dots. The best a single circle can do, is obviously a cirle, which somewhat resemples the 
+  general size of the shape. You'll see that wiht a second circle added, the shape already becomes more square-like, and when we add a 3rd cicle its already pretty good a tracing the original pattern.</p>
   <p>
   <img src="images/Expl1.gif" alt="1 circle"  style="max-height:100%; max-width:100%">
   <img src="images/Expl2.gif" alt="2 circles" style="max-height:100%; max-width:100%">
@@ -37,6 +38,9 @@
   </p>
   <br>
   <p> Example with Pi</p>
+  <p> Now lets look at a slighlyt more complicated, but still simple figure. Here I'm showing gifs with 2, 4, 8, 16, 32, and 64 circles. You'd have a hard time guessing what shape we're
+  trying to make from the first few images, but you can see that even with 16 circles it already starts to look like a "pi". 
+  Going from 32 to 64 still gives some nice improvement on how good the lines and are, but the general is there with a few as 32 circles!</p>
   <p>
   <img src="images/pi02.gif" alt="2 circles" style="max-height:100%; max-width:100%">
   <img src="images/pi04.gif" alt="4 circles" style="max-height:100%; max-width:100%">
@@ -45,6 +49,8 @@
   <img src="images/pi32.gif" alt="32 circles" style="max-height:100%; max-width:100%">
   <img src="images/pi64.gif" alt="64 circles" style="max-height:100%; max-width:100%">
   </p>
+   <p> If can we make a pi with "only" 64 circles, imagine what we can do with two of four times that! In theory, you could make ANY shape as long as you have infinate number of cirles.
+  The only restritction is that it needs to be a single line that loops, so where beginning and end meet in the same point. Most of the gifs in the Circles and Lines collection are made with 300-500 circles</p>
 </div>
 
 </body>
