--- a/Background.html
+++ b/Background.html
@@ -27,8 +27,14 @@
 <div data-include="TopNav"></div>
 <div class = "main" id = "main">
 <h1>Circles and Lines NFT Collection</h1>
-  <p> Here I'll post a description of how they are made, by demonstrating with a simple image</p>
-  <p> Example with square</p>
+  <h2> Here I'll post a description of how they are made, by demonstrating with a simple images</h2>
+  <p> The gifs in the Circles and Lines collection are build based on math! 
+  They consist of a large chain of circles. You can think of these as clocks. The beginning of the cain is the first clock in the center of the image.
+  The tip of the hand of this clock is the center of the next clock, etc. 
+  Each drawing consists of a chain of 100+ clocks and the colored line traces the tip of the hand of the last clock in the chain! 
+  The starting position, size, and speed of each clock are determined by a custom-built app using "Fourier series" which end up resulting in these mesmerizing patterns!</p>
+  
+  <h3> Example with square</h3>
   <p> Lets start with a super simple example: Here our "image" is a square pattern with 16 dots. The best a single circle can do, is obviously a cirle, which somewhat resemples the 
   general size of the shape. You'll see that wiht a second circle added, the shape already becomes more square-like, and when we add a 3rd cicle its already pretty good a tracing the original pattern.</p>
   <p>
@@ -37,10 +43,10 @@
   <img src="images/Expl3.gif" alt="3 circles" style="max-height:100%; max-width:100%">
   </p>
   <br>
-  <p> Example with Pi</p>
-  <p> Now lets look at a slighlyt more complicated, but still simple figure. Here I'm showing gifs with 2, 4, 8, 16, 32, and 64 circles. You'd have a hard time guessing what shape we're
+  <h3> Example with Pi</h3>
+  <p> Now lets look at a slightly more complicated, but still simple figure. Here I'm showing gifs with 2, 4, 8, 16, 32, and 64 circles. You'd have a hard time guessing what shape we're
   trying to make from the first few images, but you can see that even with 16 circles it already starts to look like a "pi". 
-  Going from 32 to 64 still gives some nice improvement on how good the lines and are, but the general is there with a few as 32 circles!</p>
+  Going from 32 to 64 still gives some nice improvement on how good the lines and corners are, but the general shape is there with as few as 32 circles!</p>
   <p>
   <img src="images/pi02.gif" alt="2 circles" style="max-height:100%; max-width:100%">
   <img src="images/pi04.gif" alt="4 circles" style="max-height:100%; max-width:100%">
