--- a/Background.html
+++ b/Background.html
@@ -29,7 +29,7 @@
 <h1>Circles and Lines NFT Collection</h1>
   <h2> Here is a description of how the gifs in the Circles and Lines collectoins are made, by demonstrating with simple images</h2>
   
-  <p> The gifs in the Circles and Lines collection are build based on math! 
+  <p> The gifs in the Circles and Lines collection are built based on math! 
   They consist of a large chain of circles, you can think of these as clocks that circle around each other. 
   The beginning of the chain is the first clock in the center of the image.
   The tip of the hand of this clock is the center of the next clock, etc. 
