--- a/Collection.html
+++ b/Collection.html
@@ -24,7 +24,7 @@
   <div class = "main" id = "main">
 <h1>Circles and Lines NFT Collection</h1>
     
-<p> Flowers </p>
+    <p> <h2> Flowers </h2> </p>
 <table style="width:100%">
   <tr>
     <th>Rose White</th>
@@ -49,7 +49,7 @@
   </tr>
 </table>
     
-    <p> Buildings </p>
+    <p> <h3> Buildings</h3>  </p>
 <table style="width:100%">
   <tr>
     <th>Eiffel Tower White</th>
