--- a/Collection.html
+++ b/Collection.html
@@ -24,7 +24,7 @@
   <div class = "main" id = "main">
 <h1>Circles and Lines NFT Collection</h1>
     
-    <p style="text-align:center"> <h2> Flowers </h2> </p>
+    <p style="text-align:center;"> <h2> Flowers </h2> </p>
 <table style="width:100%">
   <tr>
     <th>Rose White</th>
